# file-objects-rs

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
benches/: fs.rs
src/: lib.rs  os.rs
src/fake/: mod.rs  node.rs  registry.rs  tempdir.rs
tests/: fs.rs
