[package]
name = "filesystem"
version = "0.4.4"
description = "Real, fake, and mock implementations of file system operations"
authors = ["Isobel Redelmeier <iredelmeier@gmail.com>"]
license = "MIT"
repository = "https://github.com/iredelmeier/filesystem-rs"
readme = "README.md"
categories = [
  "development-tools::testing",
  "filesystem"
]
keywords = [
  "filesystem",
  "testing",
  "fake"
]

[lib]
bench = false
doctest = false
test = false

[[test]]
name = "fs"
required-features = ["fake", "temp"]

[features]
default = ["fake", "temp"]

fake = []
temp = ["rand", "tempdir"]

[dependencies]
rand = { version = "^0.4", optional = true }
tempdir = { version = "^0.3", optional = true }

[badges]
travis-ci = { repository = "iredelmeier/filesystem-rs" }
