[package]
name = "filesystem"
version = "0.4.4"
description = "Real, fake, and mock implementations of file system operations"
authors = ["Isobel Redelmeier <iredelmeier@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/iredelmeier/filesystem-rs"
readme = "README.md"
categories = [
  "development-tools::testing",
  "filesystem"
]
keywords = [
  "filesystem",
  "testing",
  "fake"
]

[lib]
bench = false
doctest = false
test = true

[[test]]
name = "fs"
required-features = ["fake", "temp"]

[[bench]]
name = "fs"
harness = false

[features]
default = ["fake", "temp"]

fake = []
temp = ["rand", "tempdir"]

[dependencies]
rand = { version = "^0.4", optional = true }
tempdir = { version = "^0.3", optional = true }

[dev-dependencies]
bencher = "0.1.5" # for benches on stable

[badges]
travis-ci = { repository = "iredelmeier/filesystem-rs" }
