[package]
name = "file-objects-rs"
version = "0.1.0"
description = "Real and fake implementations of file system operations"
authors = [
  "Sven Van Asbroeck <TheSven73@gmail.com>",
  "Isobel Redelmeier <iredelmeier@gmail.com>"
]
edition = "2018"
license = "MIT"
repository = "https://github.com/TheSven73/file-objects-rs"
readme = "README.md"
categories = [
  "development-tools::testing",
  "filesystem"
]
keywords = [
  "filesystem",
  "testing",
  "fake"
]

[lib]
bench = false
doctest = false
test = true

[[test]]
name = "fs"
required-features = ["fake", "temp"]

[[bench]]
name = "fs"
harness = false

[features]
default = ["fake", "temp"]

fake = []
temp = ["rand", "tempdir"]

[dependencies]
rand = { version = "^0.4", optional = true }
tempdir = { version = "^0.3", optional = true }

[dev-dependencies]
bencher = "0.1.5" # for benches on stable
